feat: finished product list page in all its views and functionality

--- a/store/blocks/desktop/components/PLP/header__plp.jsonc
+++ b/store/blocks/desktop/components/PLP/header__plp.jsonc
@@ -7,7 +7,7 @@
   // },
 
   "flex-layout.row#header__plp--container": {
-    "title": "header plp",
+    "title": "header plp desktop",
     "children": [
       "flex-layout.col#plp__breadcrumb",
       // "flex-layout.col#plp__gallery--switcher",
