feat: section one pdp

--- a/store/blocks/mobile/components/PLP/header__plp.jsonc
+++ b/store/blocks/mobile/components/PLP/header__plp.jsonc
@@ -14,7 +14,7 @@
   "flex-layout.col#mobile__plp--breadcrumb": {
     "title": "plp breadcrumb mobile",
     "children": [
-      "breadcrumb.search#mobile__header--breadcrumb"
+      // "breadcrumb.search#mobile__header--breadcrumb"
     ]
   },
 
