--- a/store/blocks/global/screen/product.jsonc
+++ b/store/blocks/global/screen/product.jsonc
@@ -1,8 +1,8 @@
 {
   "store.product": {
     "children": [
-      "responsive-layout.desktop#desktop__pdp"
-      // "responsive-layout.mobile#desktop__pdp"
+      "responsive-layout.desktop#desktop__pdp",
+      "responsive-layout.mobile#mobile__pdp"
     ]
   }
 }
