--- a/store/blocks/global/components/PDP/pdp__rigth--content.jsonc
+++ b/store/blocks/global/components/PDP/pdp__rigth--content.jsonc
@@ -122,7 +122,7 @@
     "title": "pdp product shipment text",
     "props": {
       "blockClass": "pdp__product--benefits-text",
-      "text": "DEVOLUCIONES GRATIS ¿NO ES TU TALLA? <br/> DEVUELVE EN UN PLAZO DE 60 DÍAS"
+      "text": "DEVOLUCIONES GRATIS ¿NO ES TU TALLA? DEVUELVE EN UN PLAZO DE 60 DÍAS"
     }
   }
 
