--- a/store/blocks/global/components/PDP/pdp__rigth--structure.jsonc
+++ b/store/blocks/global/components/PDP/pdp__rigth--structure.jsonc
@@ -191,7 +191,7 @@
   "flex-layout.col#pdp__buybutton--container": {
     "title": "pdp product buy button container",
     "children": [
-      "buy-button#pdp__product--buy"
+      "add-to-cart-button##pdp__product--buy"
     ],
     "props": {
       "blockClass": "pdp__buybutton--container"
