--- a/store/blocks/mobile/PDP/pdp_structure.jsonc
+++ b/store/blocks/mobile/PDP/pdp_structure.jsonc
@@ -1,12 +1,12 @@
 {
-  "flex-layout.row#mobile__pdp-section1": {
+  "flex-layout.row#pdp__breadrating--container": {
     "title": "mobile pdp section one",
     "children": [
       "flex-layout.col#mobile__pdp--breadcrumb",
       "flex-layout.col#mobile__pdp--ratings"
     ],
     "props": {
-      "blockClass": "mobile__pdp-section1",
+      "blockClass": "pdp__breadrating--container",
       "horizontalAlign": "between"
     }
   },
