style: finished product list page

--- a/store/blocks/desktop/components/PLP/header__plp.jsonc
+++ b/store/blocks/desktop/components/PLP/header__plp.jsonc
@@ -87,6 +87,7 @@
   },
 
   "drawer-trigger#mobile__text--filters": {
+    "title": "mobile text filters",
     "children":[
       "rich-text#plp__filters--btn"
     ]
