--- a/store/blocks/desktop/components/header/header__menu--subcategorypoints.jsonc
+++ b/store/blocks/desktop/components/header/header__menu--subcategorypoints.jsonc
@@ -7,7 +7,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Novedades",
         "text": "Novedades mujer"
@@ -22,7 +22,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Los Mas Vendidos",
         "text": "Los Mas Vendidos"
@@ -37,7 +37,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Solo en adidas",
         "text": "Solo en adidas"
@@ -52,7 +52,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "KITS MUNDIAL FEMENINO FIFA 2023",
         "text": "KITS MUNDIAL FEMENINO FIFA 2023"
@@ -67,7 +67,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Exclusivo Miembros",
         "text": "Exclusivo Miembros"
@@ -82,7 +82,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Proximo Lanzamientos",
         "text": "Proximo Lanzamientos"
@@ -97,7 +97,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Seleccion Colombia ¡Nuevo!",
         "text": "Seleccion Colombia ¡Nuevo!"
@@ -120,7 +120,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Ultraboost light",
         "text": "Ultraboost light"
@@ -135,7 +135,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Sportswear ¡Ropa comoda!",
         "text": "portswear ¡Ropa comoda!"
@@ -150,7 +150,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Hasta 50% OFF",
         "text": "Shop"
@@ -168,7 +168,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/queso",
         "noFollow": false,
         "tagTitle": "Novedades",
         "text": "Novedades"
@@ -183,7 +183,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/queso",
         "noFollow": false,
         "tagTitle": "Ver Todos los Tenis",
         "text": "Ver Todos los Tenis"
@@ -198,7 +198,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/queso",
         "noFollow": false,
         "tagTitle": "Running",
         "text": "Running"
@@ -213,7 +213,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/queso",
         "noFollow": false,
         "tagTitle": "Training",
         "text": "Training"
@@ -228,7 +228,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/queso",
         "noFollow": false,
         "tagTitle": "Outdoor",
         "text": "Outdoor"
@@ -243,7 +243,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/queso",
         "noFollow": false,
         "tagTitle": "Guayos",
         "text": "Guayos"
@@ -258,7 +258,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/queso",
         "noFollow": false,
         "tagTitle": "Novedades",
         "text": "Novedades"
@@ -273,7 +273,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/queso",
         "noFollow": false,
         "tagTitle": "Chanclas",
         "text": "Chanclas"
@@ -288,7 +288,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/queso",
         "noFollow": false,
         "tagTitle": "Originals",
         "text": "Originals"
@@ -303,7 +303,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/queso",
         "noFollow": false,
         "tagTitle": "Samba",
         "text": "Samba"
@@ -318,7 +318,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/queso",
         "noFollow": false,
         "tagTitle": "Gazelle",
         "text": "Gazelle"
@@ -333,7 +333,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/celulares",
         "noFollow": false,
         "tagTitle": "Hasta 50% OFF Ropa",
         "text": "Hasta 50% OFF Ropa"
@@ -348,7 +348,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/celulares",
         "noFollow": false,
         "tagTitle": "Novedades",
         "text": "Novedades"
@@ -363,7 +363,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/celulares",
         "noFollow": false,
         "tagTitle": "Camisetas",
         "text": "Camisetas"
@@ -378,7 +378,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/celulares",
         "noFollow": false,
         "tagTitle": "Licras",
         "text": "Licras"
@@ -393,7 +393,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/celulares",
         "noFollow": false,
         "tagTitle": "Chaquetas",
         "text": "Chaquetas"
@@ -408,7 +408,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/celulares",
         "noFollow": false,
         "tagTitle": "Sueters y Buzos",
         "text": "Sueters y Buzos"
@@ -423,7 +423,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/celulares",
         "noFollow": false,
         "tagTitle": "Pantalones",
         "text": "Pantalones"
@@ -438,7 +438,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/celulares",
         "noFollow": false,
         "tagTitle": "Camisetas de Futbol",
         "text": "Camisetas de Futbol"
@@ -453,7 +453,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/celulares",
         "noFollow": false,
         "tagTitle": "Sudaderas",
         "text": "Sudaderas"
@@ -468,7 +468,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/celulares",
         "noFollow": false,
         "tagTitle": "Shorts",
         "text": "shorts"
@@ -483,7 +483,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/celulares",
         "noFollow": false,
         "tagTitle": "Originals",
         "text": "Originals"
@@ -498,7 +498,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/mujer",
         "noFollow": false,
         "tagTitle": "Hasta 50% OFF Accesorios",
         "text": "Hasta 50% OFF Accesorios"
@@ -513,7 +513,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/mujer",
         "noFollow": false,
         "tagTitle": "Novedades",
         "text": "Novedades"
@@ -528,7 +528,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/mujer",
         "noFollow": false,
         "tagTitle": "Bolsos y Morrales",
         "text": "Bolsos y Morrales"
@@ -543,7 +543,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/mujer",
         "noFollow": false,
         "tagTitle": "Balones Copa Mundial",
         "text": "Balones Copa Mundial"
@@ -558,7 +558,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/mujer",
         "noFollow": false,
         "tagTitle": "Guantes",
         "text": "Guantes"
@@ -573,7 +573,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/mujer",
         "noFollow": false,
         "tagTitle": "Gorras",
         "text": "Gorras"
@@ -588,7 +588,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/mujer",
         "noFollow": false,
         "tagTitle": "Medias",
         "text": "Medias"
@@ -603,7 +603,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/mujer",
         "noFollow": false,
         "tagTitle": "Botellas de Agua",
         "text": "Botellas de Agua"
@@ -618,7 +618,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Running",
         "text": "Running"
@@ -633,7 +633,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Futbol",
         "text": "Futbol"
@@ -648,7 +648,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Training",
         "text": "Training"
@@ -663,7 +663,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Ciclismo",
         "text": "Ciclismo"
@@ -678,7 +678,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Tennis",
         "text": "Tennis"
@@ -693,7 +693,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Outdoor",
         "text": "Outdoor"
@@ -708,7 +708,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Natación",
         "text": "Natación"
@@ -723,7 +723,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Yoga",
         "text": "Yoga"
@@ -738,7 +738,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Basketball",
         "text": "Basketball"
@@ -753,7 +753,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Padel",
         "text": "Padel"
@@ -768,7 +768,7 @@
     "blockClass": "menu__subcategory--name",
     "itemProps": {
       "type": "internal",
-      "href": "#",
+      "href": "/queso",
       "noFollow": false,
       "tagTitle": "Superstar",
       "text": "Superstar"
@@ -783,7 +783,7 @@
     "blockClass": "menu__subcategory--name",
     "itemProps": {
       "type": "internal",
-      "href": "#",
+      "href": "/queso",
       "noFollow": false,
       "tagTitle": "Forum",
       "text": "Forum"
@@ -798,7 +798,7 @@
     "blockClass": "menu__subcategory--name",
     "itemProps": {
       "type": "internal",
-      "href": "#",
+      "href": "/queso",
       "noFollow": false,
       "tagTitle": "Stan Smith",
       "text": "Stan Smith"
@@ -813,7 +813,7 @@
     "blockClass": "menu__subcategory--name",
     "itemProps": {
       "type": "internal",
-      "href": "#",
+      "href": "/queso",
       "noFollow": false,
       "tagTitle": "Gazelle",
       "text": "Gazelle"
@@ -828,7 +828,7 @@
     "blockClass": "menu__subcategory--name",
     "itemProps": {
       "type": "internal",
-      "href": "#",
+      "href": "/queso",
       "noFollow": false,
       "tagTitle": "Samba",
       "text": "Samba"
@@ -863,7 +863,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/mujer",
         "noFollow": false,
         "tagTitle": "Calzado",
         "text": "Calzado"
@@ -878,7 +878,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/mujer",
         "noFollow": false,
         "tagTitle": "Ropa",
         "text": "Ropa"
@@ -893,7 +893,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/mujer",
         "noFollow": false,
         "tagTitle": "Accesorios",
         "text": "Accesorios"
@@ -934,7 +934,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/celulares",
         "noFollow": false,
         "tagTitle": "Running",
         "text": "Running"
@@ -949,7 +949,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/celulares",
         "noFollow": false,
         "tagTitle": "Training",
         "text": "Training"
@@ -964,7 +964,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/celulares",
         "noFollow": false,
         "tagTitle": "Futbol",
         "text": "Futbol"
@@ -988,7 +988,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Chapters",
         "text": "Chapters"
@@ -1003,7 +1003,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "adizero",
         "text": "adizero"
@@ -1018,7 +1018,7 @@
       "blockClass": "menu__subcategory--name",
       "itemProps": {
         "type": "internal",
-        "href": "#",
+        "href": "/electrodomesticos",
         "noFollow": false,
         "tagTitle": "Superstar",
         "text": "Superstar"
