--- a/store/blocks/phone/components/home/home__info--card.jsonc
+++ b/store/blocks/phone/components/home/home__info--card.jsonc
@@ -31,7 +31,7 @@
         "headline": "SORPRENDE A MAMÁ",
         "subhead": "Porque mamá se merece lo mejor, te presentamos <br/> nuestros últimos lanzamientos",
         "callToActionText": "Comprar ahora",
-        "callToActionUrl": "/sale/d",
+        "callToActionUrl": "/mujer",
         "blockClass": "phone__infocards",
         "textAlignment": "center"
       }
@@ -46,7 +46,7 @@
         "headline": "BAD BUNNY CAMPUS <br/> WILD MOSS",
         "subhead": "Experimenta la primavera.",
         "callToActionText": "VER AHORA",
-        "callToActionUrl": "/sale/d",
+        "callToActionUrl": "/queso",
         "blockClass": "phone__infocards",
         "textAlignment": "center"
       }
