--- a/manifest.json
+++ b/manifest.json
@@ -54,7 +54,8 @@
     "vtex.store-video": "1.x",
     "vtex.store-link": "0.x",
     "vtex.disclosure-layout": "1.x",
-    "vtex.product-price": "1.x"
+    "vtex.product-price": "1.x",
+    "itgloberspartnercl.whatsapp-button": "0.x"
   },
   "peerDependencies": {
     "vtex.mega-menu": "2.x",
