--- a/store/blocks/tablet/screen/home.jsonc
+++ b/store/blocks/tablet/screen/home.jsonc
@@ -20,6 +20,7 @@
 
   "flex-layout.col#home__tablet": {
     "children": [
+      "whatsapp-button",
       "flex-layout.col#tablet__home--infocards",
       "flex-layout.row#mobile__interesting--title",
       "flex-layout.row#home__shelf",
